--- a/app/views/todolists/new.html.erb
+++ b/app/views/todolists/new.html.erb
@@ -1,9 +1,13 @@
 <%= form_with model:@list, url:'/todolists', local:true do |f| %>
-	<h4>タイトル</h4>
-	<%= f.text_field :title %>
-	<h4>本文</h4>
-	<%= f.text_area :body %>
-	<h4>画像</h4>
-	<%= f.attachment_field :image %>
-	<%= f.submit '投稿' %>
+	<div class="post-wrap">
+		<h4 class="post-content">タイトル</h4>
+		<div class="title-form">
+			<%= f.text_field :title %>
+		</div>
+		<h4 class="post-content">本文</h4>
+		<%= f.text_area :body %>
+		<h4 class="post-content">画像</h4>
+ 	</div>
+		<%= f.attachment_field :image %>
+		<%= f.submit '投稿' %>
 <% end %>
